--- a/index.ipynb
+++ b/index.ipynb
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "None\n",
-      "None\n"
+      "1.0\n",
+      "-0.0\n",
+      "0.6500224216483541\n"
      ]
     }
    ],
@@ -60,8 +60,17 @@
     "    entropy(p) = - SUM (Pi * log(Pi) )\n",
     "    '''\n",
     "\n",
-    "    pass\n",
-    "\n",
+    "    total = 0\n",
+    "    for p in pi:\n",
+    "        p = p / sum(pi)\n",
+    "        if p != 0:\n",
+    "            total +=  p * log(p, 2)\n",
+    "        else:\n",
+    "            total += 0\n",
+    "    total *= -1\n",
+    "    return total\n",
+    "                \n",
+    "            \n",
     "\n",
     "# Test the function \n",
     "\n",
@@ -72,6 +81,38 @@
     "# 1.0\n",
     "# 0.0\n",
     "# 0.6500224216483541"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi = ([1,1])\n",
+    "for i in pi:\n",
+    "    print(i)\n",
+    "\n",
+    "sum(pi)"
    ]
   },
   {
@@ -90,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "0.5408520829727552\n"
      ]
     }
    ],
@@ -107,8 +148,14 @@
     "    return the information gain:\n",
     "    gain(D, A) = entropy(D)− SUM( |Di| / |D| * entropy(Di) )\n",
     "    '''\n",
+    "    total = 0\n",
+    "    for Di in a:\n",
+    "        total += abs(sum(Di) / sum(D)) * entropy(Di)\n",
     "\n",
-    "    pass\n",
+    "    gain = entropy(D) - total\n",
+    "    return gain\n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
     "# Uncomment to run the test\n",
@@ -136,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +203,32 @@
     "\n",
     "\n",
     "# Your code here\n",
+    "play = [9, 5] # Yes, No\n",
     "\n",
+    "# attribute, number of members (feature)\n",
+    "outlook = [\n",
+    "    [4, 0],  # overcase\n",
+    "    [2, 3],  # sunny\n",
+    "    [3, 2]   # rain\n",
+    "]\n",
+    "temperature = [\n",
+    "    [2, 2],  # hot\n",
+    "    [3, 1],  # cool\n",
+    "    [4, 2]   # mild\n",
+    "]\n",
+    "humidity = [\n",
+    "    [3, 4],  # high\n",
+    "    [6, 1]   # normal\n",
+    "]\n",
+    "wind = [\n",
+    "    [6, 2],  # no\n",
+    "    [3, 3]   # yes\n",
+    "]\n",
+    "print (\"Information Gain:\\n\" )\n",
+    "print(\"Outlook:\", IG(play, outlook))\n",
+    "print(\"Temperature:\",IG(play, temperature))\n",
+    "print(\"Humidity:\",IG(play, humidity))\n",
+    "print(\"Wind:,\",IG(play, wind))\n",
     "\n",
     "\n",
     "\n",
@@ -189,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +280,18 @@
     "\n",
     "\n",
     "# Your code here \n",
+    "Play = [2, 3] \n",
     "\n",
+    "temperature = [[0, 2],[1, 0], [1, 1]]  \n",
+    "humidity = [[0, 3],[2, 0]]\n",
+    "wind = [[2, 2],[1, 1]]\n",
+    "\n",
+    "\n",
+    "print (\"Information Gain:\\n\" )\n",
+    "\n",
+    "print(\"Temperature:\",IG(play, temperature))\n",
+    "print(\"Humidity:\",IG(play, humidity))\n",
+    "print(\"Wind:,\",IG(play, wind))\n",
     "\n",
     "\n",
     "\n",
@@ -262,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +364,16 @@
     "\n",
     "\n",
     "# Your code here\n",
+    "play = [3, 2] # Yes, No\n",
     "\n",
+    "temperature = [[2, 1],[1, 1]] # [0, 0] hot - we dont need to pass in an empty distribution\n",
+    "humidity = [[1, 1], [2, 1]]\n",
+    "wind = [[3, 0],[0, 2]]\n",
+    "\n",
+    "print (\"Information Gain:\\n\" )\n",
+    "print(\"Temperature:\",IG(play, temperature))\n",
+    "print(\"Humidity:\",IG(play, humidity))\n",
+    "print(\"Wind:,\",IG(play, wind))\n",
     "\n",
     "\n",
     "\n",
@@ -349,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
